# routes/api.php
@@ -5,14 +5,14 @@ use App\Http\Controllers\Api\ProductController;
 use Illuminate\Http\Request;
 use Illuminate\Support\Facades\Route;
 
-Route::get('/user', function (Request $request) {
-    return $request->user();
-})->middleware('auth:sanctum');
+// Route::get('/user', function (Request $request) {
+//     return $request->user();
+// })->middleware('auth:sanctum');
 
 
 Route::post('/register', [AuthController::class, 'register']);
 Route::post('/login', [AuthController::class, 'login']);
-Route::post('/get-auth-user', [AuthController::class, 'get_auth_user']);
+Route::middleware('auth:sanctum')->get('/get-auth-user', [AuthController::class, 'get_auth_user']);
 Route::post('/logout', [AuthController::class, 'logout']);
 
 // 🔒 Protect the GET /product route
